--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -29,6 +29,8 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Blog/Index">Quản lí Blog</a>
                         </li>
                     </ul>
+
+                    <partial name="_LoginPartial" />
                 </div>
             </div>
         </nav>
