--- a/Areas/Identity/Pages/Account/RegisterConfirmation.cshtml
+++ b/Areas/Identity/Pages/Account/RegisterConfirmation.cshtml
@@ -1,7 +1,7 @@
-﻿@page
+﻿@page "/can-xac-thuc-tai-khoan.html"
 @model RegisterConfirmationModel
 @{
-    ViewData["Title"] = "Register confirmation";
+    ViewData["Title"] = "Thông báo xác thực tài khoản";
 }
 
 <h1>@ViewData["Title"]</h1>
