--- a/Pages/Shared/_LoginPartial.cshtml
+++ b/Pages/Shared/_LoginPartial.cshtml
@@ -18,7 +18,10 @@
         </a>
     </li>
     <li class="nav-item">
-        <a class="nav-link text-dark" asp-page="/Account/Logout" asp-area="Identity">Đăng xuất</a>
+        @* <a class="nav-link text-dark" asp-page="/Account/Logout" asp-area="Identity">Đăng xuất</a> *@
+          <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/", new { area = "" })" method="post">
+                <button type="submit" class="nav-link text-dark btn btn-link">Đăng xuất</button>
+            </form>
     </li>
     } else {
  <li class="nav-item">
